import { PlaceholderScreen } from "@/src/components/common/PlaceholderScreen";

export default function HistoryScreen() {
  return <PlaceholderScreen title="History" />;
}
